--- a/BeeniHackathon/BeeniHackathon/package.json
+++ b/BeeniHackathon/BeeniHackathon/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "mande": "^2.0.9",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
