--- a/BeeniHackathon/package.json
+++ b/BeeniHackathon/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "csv-parser": "^3.0.0",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-easy-data-table": "^1.5.47"
   },
   "devDependencies": {
+    "@rollup/plugin-dsv": "^3.0.5",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
